Fix CSS formatting by removing unnecessary whitespace

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-margin: auto;
+margin: 0 auto;
 color: #FFF;
-
-
 }
+
